2008-12-19  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Minor fix of typo in a docstring.

2008-12-18  Tomas Cerha  <cerha@brailcom.org>

	* pytis/output/flibdata.py:
	Added assertion info.

	* pytis/form/form.py:
	Disable default print menu item.

2008-12-16  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py:
	Use normal (breakable) spaces within index search controls.

2008-12-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: 
	Wrap formatted field content in a div, not a span.

	* pytis/web/field.py:
	Ignore the surrounding paragraph if a formatted field has just one
	paragraph.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/web/__init__.py:
	* translations/Makefile:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Fixes of the previous translation changes.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/web/__init__.py:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	String length constraint messages slightly improved.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* translations/Makefile:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Include lib/data/types_.py into translations.
	Translate some Czech messages.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Translations updated.
